--- a/popup.css
+++ b/popup.css
@@ -35,6 +35,13 @@ hr {
   grid-gap: 10px;
   justify-content: space-between;
   margin: 5px 0;
+  transition: all 0.3s ease;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 5px;
+}
+
+.list-item:hover {
+  border-bottom-color: #fff;
 }
 
 .list-item--empty {
@@ -59,6 +66,11 @@ hr {
   text-decoration: none;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+
+.list-item-delete {
+  display: flex;
+  align-items: center;
 }
 
 .list-item-link span {
